# the-game-of-life

./: .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  index.html
js/: gol.js  states.js
src/: main.c
